fix: Adjust brightness and contrast of OSM dark layer tiles.

--- a/src/style.css
+++ b/src/style.css
@@ -908,7 +908,7 @@ html, body {
 
 /* OSM inverted dark layer */
 .tiles-osm-dark img {
-  filter: invert(100%) hue-rotate(180deg) brightness(95%) contrast(90%) saturate(0%);
+  filter: invert(100%) hue-rotate(180deg) brightness(100%) contrast(100%) saturate(0%);
 }
 
 /* Leaflet dark overrides */
